objects/ssot__ProgramCohortMember__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Program Cohort Member Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsRemovedFromCohort__c</fullName>
        <label>Removed From Cohort</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramCohortId__c</fullName>
        <label>Program Cohort</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramEnrollee__c</fullName>
        <label>Program Enrollee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramEnrollmentId__c</fullName>
        <label>Program Enrollment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramEnrollmentStatus__c</fullName>
        <label>Program Enrollment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RemovalDate__c</fullName>
        <label>Removal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668769381_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramCohortMember_ProgramCohortId__rel</label>
        <referenceTo>ssot__ProgramCohort__dlm</referenceTo>
        <relationshipLabel>ProgramCohortMember_ProgramCohortId__rel</relationshipLabel>
        <relationshipName>rel_1716668769381_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668778294_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProgramCohortMember_ProgramEnrollmen_rel</label>
        <referenceTo>ssot__ProgramEnrollment__dlm</referenceTo>
        <relationshipLabel>ProgramCohortMember_ProgramEnrollmen_rel</relationshipLabel>
        <relationshipName>rel_1716668778294_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>